# v-backtester

./: .coverage  .gitignore  API_ENGINEER_SUMMARY.md  QUICK_START_API.md  README.md  main.py  pyproject.toml  start_api.sh
backend/: API_README.md  README.md  __init__.py  app.py  example_backtest.py  test_api.py  test_basic.py
backend/api/: __init__.py  ma_routes.py
backend/backtest/: __init__.py  ma_backtest.py
backend/indicators/: __init__.py  ma_indicator.py
backend/tests/: README.md  TEST_REPORT.md  __init__.py  conftest.py  test_ma_strategy.py
frontend/: ma-strategy.html
prompt/: agent_team.txt  agent_team_dev_qa.txt
